--- a/.env
+++ b/.env
@@ -11,8 +11,8 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=rantwcjx_rants
-DB_USERNAME=rantwcjx_rants
-DB_PASSWORD=MIcr8ive$
+DB_USERNAME=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
