--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.12",
         "laravel/tinker": "^2.5",
-        "nesbot/carbon": "^2.43"
+        "nesbot/carbon": "^2.43",
+        "willvincent/feeds": "2.2.0"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
