--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:aVwTcg/U+GY1Gc0MNyc8w4IKojfG3mfbE+5JxBjZsnA=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://rantsnconfess.com
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
@@ -10,9 +10,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=rants
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=rantwcjx_rants
+DB_USERNAME=rantwcjx_rants
+DB_PASSWORD=MIcr8ive$
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
